--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ verify_ssl = true
 [packages]
 django = "*"
 django-crispy-forms = "*"
+gunicorn = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.8.3"
